# DagPaste

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
nginx/: nginx.conf
src/: counter.rs  id.rs  main.rs
